[package]
name = "dung"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
debug = ["bevy/dynamic_linking", "bevy/debug"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
	"std",
	"async_executor",
	"bevy_log",
	"bevy_window",
	"bevy_winit",
	"bevy_sprite",
	"bevy_sprite_render",
	"multi_threaded",
	"x11",
	"wayland",

	"png",
	"default_font",
] }
rand = "0.9.2"
bevy_rand = { version = "0.12", default-features = false, features = [
	"std",
	"thread_local_entropy",
	"wyrand",
] }
bevy_seedling = { version = "0.6.1", default-features = false, features = ["rand", "ogg", "wav"] }
bevy_query_observer = "0.1.0"
bevy_frp = { git = "https://github.com/CorvusPrudens/bevy_frp.git" }
bevy_enhanced_input = "0.20.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
panic = 'abort'
strip = true

# For custom wgpu renderer
# [target.'cfg(target_os = "linux")'.dependencies]
# winit = { version = "0.30", default-features = false, features = [
# 	"rwh_06",
# 	"x11",
# ] }
# wgpu = { version = "27.0", default-features = false, features = [
# 	"std",
# 	"vulkan",
# 	"wgsl",
# ] }
# pollster = "0.4"
